# batram-cov

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: getting-started.ipynb  getting-started.py
src/batram_cov/: __init__.py  app.py  data_config_parser.py  data_gen.py  dist_matrix.py  experiment_1.py  gp.py  hermgauss.py  hgpip.py  model.py  natgrad.py  plotting.py  predictions.py  rchol.py  regression_problem.py  stopping.py  tmcov.py  typing.py  utils.py  vecchia.py
tests/: test_config_parser.py  test_configs_parser.py  test_data_gen.py  test_hermgauss.py  test_regression_problems.py  test_stopping.py  test_version.py
