[project]
name = "batram-cov"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Dan Drennan", email = "danjdrennan@gmail.com" },
    { name = "Paul F.V. Wiemann", email = "wiep@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "blackjax",
    "cartopy",
    "flax",
    "ipykernel",
    "jax[cuda]==0.5",
    "jupyter",
    "matplotlib",
    "nbconvert",
    "numpy<2.0",
    "numpyro",
    "optax",
    "pyside6",
    "scikit-learn",
    "seaborn",
    "tensorflow-probability[jax]",
    "tqdm",
    "veccs @ git+https://github.com/katzfuss-group/veccs.git@v0.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
metadata.allow-direct-references = true

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "ipython",
    "pytest>=8.3.5",
    "jupytext>=1.17.1",
]
[tool.basedpyright]
typeCheckingMode = "basic"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Enable isort rules
extend-select = ["I"]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
