[project]
name = "batram-cov"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Dan Drennan", email = "danjdrennan@gmail.com" },
    { name = "Paul F.V. Wiemann", email = "wiep@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "cartopy",
    "ipykernel",
    "jupyter",
    "matplotlib",
    "nbconvert",
    "numpy",
    "pyside6",
    "scikit-learn",
    "seaborn",
    "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
metadata.allow-direct-references = true

# NOTE(djd): `veccs` in this table because it otherwise raises errors when
# syncing the optional dependencies.
[project.optional-dependencies]
cpu = [
    "blackjax",
    "flax",
    "jax==0.5",
    "jaxtyping>=0.3.9",
    "numpyro",
    "optax",
    "tensorflow-probability[jax]",
    "veccs @ git+https://github.com/katzfuss-group/veccs.git@v0.0.2",
]
cuda = [
    "blackjax",
    "flax",
    "jax[cuda]==0.5",
    "jaxtyping>=0.3.9",
    "numpyro",
    "optax",
    "tensorflow-probability[jax]",
    "veccs @ git+https://github.com/katzfuss-group/veccs.git@v0.0.2",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "ipython",
    "pytest>=8.3.5",
    "jupytext>=1.17.1",
    "pytest-benchmark>=5.2.3",
]
[tool.basedpyright]
typeCheckingMode = "basic"

# See https://astral.sh/ruff/configuration for details of config options.
[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

extend-select = ["I"]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
